package figuras;

public interface Desenho {
    String desenhar();
}
